lanjut dari yg  hari jumat

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -189,10 +189,10 @@
                 <i class="bi bi-chevron-down toggle-dropdown"></i
               ></a>
               <ul>
-                <li><a href="department-details.html">Menu Pelatihan</a></li>
+                <li><a href="menupelatihan.html">Menu Pelatihan</a></li>
                 <li><a href="service-details.html">Kalender Pelatihan</a></li>
                 <li><a href="appointment.html">Daftar Pelatihan</a></li>
-                <li><a href="testimonials.html">Alur Pendaftaran</a></li>
+                <li><a href="privacy.html">Alur Pendaftaran</a></li>
                 <li><a href="gallery.html">Statistik</a></li>
               </ul>
             </li>
@@ -203,17 +203,17 @@
               ></a>
               <ul>
                 <li>
-                  <a href="department-details.html">Profesional Fasilitor</a>
+                  <a href="doctors.html">Profesional Fasilitor</a>
                 </li>
                 <li>
-                  <a href="service-details.html">Instuktur Tersertifikasi</a>
+                  <a href="doctors.html">Instuktur Tersertifikasi</a>
                 </li>
                 <li>
-                  <a href="appointment.html"
+                  <a href="doctors.html"
                     >Tim Penyelenggara Pelatihan Tersertifikasi</a
                   >
                 </li>
-                <li><a href="testimonials.html">Institusi Kerjasama</a></li>
+                <li><a href="departments.html">Institusi Kerjasama</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -222,10 +222,9 @@
                 <i class="bi bi-chevron-down toggle-dropdown"></i
               ></a>
               <ul>
-                <li><a href="department-details.html">Profil Diklat</a></li>
-                <li><a href="service-details.html">Struktur Organisasi</a></li>
-                <li><a href="appointment.html">Kontak</a></li>
-                <li><a href="testimonials.html">Institusi Kerjasama</a></li>
+                <li><a href="about.html">Profil Diklat</a></li>
+                <li><a href="terms.html">Struktur Organisasi</a></li>
+                <li><a href="contact.html">Kontak</a></li>
               </ul>
             </li>
             <!-- <li><a href="contact.html">Contact</a></li> -->
@@ -273,32 +272,12 @@
                         data-aos-delay="300"
                       >
                         <a href="appointment.html" class="btn btn-primary"
-                          >Book Appointment</a
+                          >Daftar Pelatihan</a
                         >
-                        <a href="services.html" class="btn btn-outline"
-                          >Explore Services</a
+                        <a href="menupelatihan.html" class="btn btn-outline"
+                          >Menu Pelatihan</a
                         >
-                      </div>
-
-                      <div
-                        class="info-badges"
-                        data-aos="fade-up"
-                        data-aos-delay="350"
-                      >
-                        <div class="badge-item">
-                          <i class="bi bi-telephone-fill"></i>
-                          <div class="badge-content">
-                            <span>Emergency Line</span>
-                            <strong>+1 (555) 987-6543</strong>
-                          </div>
-                        </div>
-                        <div class="badge-item">
-                          <i class="bi bi-clock-fill"></i>
-                          <div class="badge-content">
-                            <span>Working Hours</span>
-                            <strong>Mon-Fri: 8AM-8PM</strong>
-                          </div>
-                        </div>
+                        <br><br>
                       </div>
                     </div>
                   </div>
@@ -535,7 +514,7 @@
                     techniques and treatment options for heart conditions,
                     ensuring optimal cardiac health for all patients.
                   </p>
-                  <a href="department-details.html" class="btn-learn-more">
+                  <a href="menupelatihan-details.html" class="btn-learn-more">
                     <span>Learn More</span>
                     <i class="fas fa-arrow-right"></i>
                   </a>
@@ -567,7 +546,7 @@
                     system disorders, providing cutting-edge treatments and
                     compassionate support for neurological conditions.
                   </p>
-                  <a href="department-details.html" class="btn-learn-more">
+                  <a href="menupelatihan-details.html" class="btn-learn-more">
                     <span>Learn More</span>
                     <i class="fas fa-arrow-right"></i>
                   </a>
@@ -599,7 +578,7 @@
                     muscles with innovative surgical and non-surgical treatment
                     approaches for mobility restoration.
                   </p>
-                  <a href="department-details.html" class="btn-learn-more">
+                  <a href="menupelatihan-details.html" class="btn-learn-more">
                     <span>Learn More</span>
                     <i class="fas fa-arrow-right"></i>
                   </a>
@@ -632,7 +611,7 @@
                     child-friendly environment with experienced pediatric
                     specialists.
                   </p>
-                  <a href="department-details.html" class="btn-learn-more">
+                  <a href="menupelatihan-details.html" class="btn-learn-more">
                     <span>Learn More</span>
                     <i class="fas fa-arrow-right"></i>
                   </a>
@@ -664,7 +643,7 @@
                     offering advanced treatment options, clinical trials, and
                     compassionate support throughout the cancer journey.
                   </p>
-                  <a href="department-details.html" class="btn-learn-more">
+                  <a href="menupelatihan-details.html" class="btn-learn-more">
                     <span>Learn More</span>
                     <i class="fas fa-arrow-right"></i>
                   </a>
@@ -696,7 +675,7 @@
                     response capabilities, state-of-the-art equipment, and
                     experienced emergency physicians for critical care.
                   </p>
-                  <a href="department-details.html" class="btn-learn-more">
+                  <a href="menupelatihan-details.html" class="btn-learn-more">
                     <span>Learn More</span>
                     <i class="fas fa-arrow-right"></i>
                   </a>
