--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,150 +1,289 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>Login - DIKLAT RSMS</title>
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Login - DIKLAT RSMS</title>
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon" />
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link
+      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link
+      href="assets/vendor/fontawesome-free/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <link
+      href="assets/vendor/glightbox/css/glightbox.min.css"
+      rel="stylesheet"
+    />
 
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <!-- Main CSS File -->
+    <link href="assets/css/main.css" rel="stylesheet" />
+  </head>
 
-  <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
-</head>
+  <body class="appointment-page">
+    <!-- ======= Header ======= -->
+    <header id="header" class="header d-flex align-items-center fixed-top">
+      <div
+        class="header-container container-fluid container-xl d-flex align-items-center justify-content-between"
+      >
+        <a
+          href="index.html"
+          class="logo d-flex align-items-center me-auto me-xl-0"
+        >
+          <h1 class="sitename">DIKLAT RSMS</h1>
+        </a>
 
-<body class="appointment-page">
+        <nav id="navmenu" class="navmenu">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+          <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+        </nav>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="header-container container-fluid container-xl d-flex align-items-center justify-content-between">
+        <a class="btn-getstarted" href="register.html">Register</a>
+      </div>
+    </header>
+    <!-- End Header -->
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <h1 class="sitename">DIKLAT RSMS</h1>
-      </a>
+    <main class="main">
+      <!-- Page Title -->
+      <div class="page-title mt-5 pt-5 text-center" data-aos="fade-up">
+        <h1>Login Akun</h1>
+        <p>Masuk ke akun Diklat Margono Anda untuk melanjutkan.</p>
+      </div>
 
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-      </nav>
+      <!-- Login Section -->
+      <section
+        class="section d-flex align-items-center justify-content-center"
+        data-aos="fade-up"
+        data-aos-delay="200"
+      >
+        <div class="container" style="max-width: 480px">
+          <div class="card shadow-sm border-0 rounded-4">
+            <div class="card-body p-4">
+              <h4 class="text-center mb-4">
+                <i class="bi bi-person-circle me-2"></i>Login
+              </h4>
 
-      <a class="btn-getstarted" href="register.html">Register</a>
-    </div>
-  </header>
-  <!-- End Header -->
+              <form id="loginForm">
+                <div class="mb-3">
+                  <label class="form-label">Email</label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    name="email"
+                    placeholder="Masukkan email"
+                    required
+                  />
+                </div>
 
-  <main class="main">
+                <div class="mb-3">
+                  <label class="form-label">Password</label>
+                  <input
+                    type="password"
+                    class="form-control"
+                    name="password"
+                    placeholder="Masukkan password"
+                    required
+                  />
+                </div>
 
-    <!-- Page Title -->
-    <div class="page-title mt-5 pt-5 text-center" data-aos="fade-up">
-      <h1>Login Akun</h1>
-      <p>Masuk ke akun Diklat Margono Anda untuk melanjutkan.</p>
-    </div>
+                <button type="submit" class="btn btn-primary w-100">
+                  <i class="bi bi-box-arrow-in-right me-2"></i>Masuk
+                </button>
 
-    <!-- Login Section -->
-    <section class="section d-flex align-items-center justify-content-center" data-aos="fade-up" data-aos-delay="200">
-      <div class="container" style="max-width: 480px;">
-        <div class="card shadow-sm border-0 rounded-4">
-          <div class="card-body p-4">
-            <h4 class="text-center mb-4"><i class="bi bi-person-circle me-2"></i>Login</h4>
+                <div class="text-center mt-3">
+                  <small
+                    ><a
+                      href="#"
+                      data-bs-toggle="modal"
+                      data-bs-target="#forgotPasswordModal"
+                      >Lupa Password?</a
+                    ></small
+                  ><br />
+                  <small
+                    >Belum punya akun? <a href="register.html">Daftar</a></small
+                  ><br />
+                </div>
+              </form>
 
-            <form id="loginForm">
+              <div id="msg" class="alert mt-3 d-none"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- Modal Lupa Password -->
+    <div
+      class="modal fade"
+      id="forgotPasswordModal"
+      tabindex="-1"
+      aria-labelledby="forgotPasswordLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content rounded-4">
+          <div class="modal-header">
+            <h5 class="modal-title" id="forgotPasswordLabel">Lupa Password</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p class="small mb-3">
+              Masukkan email Anda untuk menerima tautan reset password.
+            </p>
+            <form id="forgotPasswordForm">
               <div class="mb-3">
                 <label class="form-label">Email</label>
-                <input type="email" class="form-control" name="email" placeholder="Masukkan email" required>
+                <input
+                  type="email"
+                  class="form-control"
+                  name="email"
+                  placeholder="Masukkan email"
+                  required
+                />
               </div>
-
-              <div class="mb-3">
-                <label class="form-label">Password</label>
-                <input type="password" class="form-control" name="password" placeholder="Masukkan password" required>
-              </div>
-
               <button type="submit" class="btn btn-primary w-100">
-                <i class="bi bi-box-arrow-in-right me-2"></i>Masuk
+                <i class="bi bi-envelope me-2"></i>Kirim Tautan Reset
               </button>
-
-              <div class="text-center mt-3">
-                <small>Belum punya akun? <a href="register.html">Daftar</a></small>
-              </div>
             </form>
-
-            <div id="msg" class="alert mt-3 d-none"></div>
+            <div id="forgotMsg" class="alert mt-3 d-none"></div>
           </div>
         </div>
       </div>
-    </section>
-
-  </main>
-
-  <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer position-relative light-background">
-    <div class="container text-center py-3">
-      <p>© <strong>PelatihanMargono</strong> All Rights Reserved</p>
     </div>
-  </footer>
 
-  <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
-    <i class="bi bi-arrow-up-short"></i>
-  </a>
+    <!-- ======= Footer ======= -->
+    <footer id="footer" class="footer position-relative light-background">
+      <div class="container text-center py-3">
+        <p>© <strong>PelatihanMargono</strong> All Rights Reserved</p>
+      </div>
+    </footer>
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/js/main.js"></script>
+    <!-- Scroll Top -->
+    <a
+      href="#"
+      id="scroll-top"
+      class="scroll-top d-flex align-items-center justify-content-center"
+    >
+      <i class="bi bi-arrow-up-short"></i>
+    </a>
 
-  <!-- Login Script -->
-  <script>
-    document.getElementById("loginForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const form = e.target;
-      const data = {
-        email: form.email.value,
-        password: form.password.value
-      };
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/js/main.js"></script>
 
-      const msg = document.getElementById("msg");
-      msg.classList.add("d-none");
+    <!-- Login Script -->
+    <script>
+      document
+        .getElementById("loginForm")
+        .addEventListener("submit", async (e) => {
+          e.preventDefault();
+          const form = e.target;
+          const data = {
+            email: form.email.value,
+            password: form.password.value,
+          };
 
-      try {
-        const res = await fetch("http://localhost:5000/auth/login", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(data)
+          const msg = document.getElementById("msg");
+          msg.classList.add("d-none");
+
+          try {
+            const res = await fetch("http://localhost:5000/auth/login", {
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify(data),
+            });
+            const result = await res.json();
+
+            msg.classList.remove("d-none");
+            msg.textContent = result.message;
+            msg.className = `alert mt-3 ${
+              res.ok ? "alert-success" : "alert-danger"
+            }`;
+
+            if (res.ok)
+              setTimeout(() => (window.location.href = "index.html"), 1200);
+          } catch (err) {
+            msg.classList.remove("d-none");
+            msg.textContent = "Gagal terhubung ke server";
+            msg.className = "alert mt-3 alert-danger";
+          }
+          // LUPA PASSWORD
+          document
+            .getElementById("forgotPasswordForm")
+            .addEventListener("submit", async (e) => {
+              e.preventDefault();
+              const form = e.target;
+              const data = { email: form.email.value };
+
+              const msg = document.getElementById("forgotMsg");
+              msg.classList.add("d-none");
+
+              try {
+                const res = await fetch(
+                  "http://localhost:5000/auth/forgot-password",
+                  {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify(data),
+                  }
+                );
+
+                const result = await res.json();
+                msg.classList.remove("d-none");
+                msg.textContent = result.message;
+                msg.className = `alert mt-3 ${
+                  res.ok ? "alert-success" : "alert-danger"
+                }`;
+
+                if (res.ok) {
+                  form.reset();
+                  setTimeout(() => {
+                    const modal = bootstrap.Modal.getInstance(
+                      document.getElementById("forgotPasswordModal")
+                    );
+                    modal.hide();
+                  }, 1500);
+                }
+              } catch (err) {
+                msg.classList.remove("d-none");
+                msg.textContent = "Gagal mengirim permintaan reset password";
+                msg.className = "alert mt-3 alert-danger";
+              }
+            });
         });
-        const result = await res.json();
-
-        msg.classList.remove("d-none");
-        msg.textContent = result.message;
-        msg.className = `alert mt-3 ${res.ok ? 'alert-success' : 'alert-danger'}`;
-
-        if (res.ok) setTimeout(() => window.location.href = "index.html", 1200);
-      } catch (err) {
-        msg.classList.remove("d-none");
-        msg.textContent = "Gagal terhubung ke server";
-        msg.className = "alert mt-3 alert-danger";
-      }
-    });
-  </script>
-</body>
+    </script>
+  </body>
 </html>
