--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Contact - MediTrust Bootstrap Template</title>
+  <title>Kontak - Diklat RSMS</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="icon" href="/pelatihanmargono/backend/uploads/foto/LogoRSMS2.png" type="image/png" sizes="512x512">
+    <link rel="apple-touch-icon" href="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png" sizes="180x180">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -132,8 +132,7 @@
       </div>
 
       <div class="title-wrapper">
-        <h1>Contact</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+        <h1>KONTAK</h1>
       </div>
     </div><!-- End Page Title -->
 
@@ -144,8 +143,7 @@
         <div class="contact-wrapper">
           <div class="contact-info-panel">
             <div class="contact-info-header">
-              <h3>Contact Information</h3>
-              <p>Dignissimos deleniti accusamus rerum voluptate. Dignissimos rerum sit maiores reiciendis voluptate inventore ut.</p>
+              <h3>Informasi Kontak</h3>
             </div>
 
             <div class="contact-info-cards">
@@ -154,8 +152,9 @@
                   <i class="bi bi-pin-map-fill"></i>
                 </div>
                 <div class="card-content">
-                  <h4>Our Location</h4>
-                  <p>4952 Hilltop Dr, Anytown, CA 90210</p>
+                  <h4>Lokasi</h4>
+                  <p>Jl. Dr. Angka No. 1-2 Purwokerto, Kabupaten Banyumas
+                      Provinsi Jawa Tengah, Kode Pos 53122/p>
                 </div>
               </div>
 
@@ -164,8 +163,8 @@
                   <i class="bi bi-envelope-open"></i>
                 </div>
                 <div class="card-content">
-                  <h4>Email Us</h4>
-                  <p>info@example.com</p>
+                  <h4>Email</h4>
+                  <p>rsmargono@jatengprov.go.id</p>
                 </div>
               </div>
 
@@ -174,18 +173,8 @@
                   <i class="bi bi-telephone-fill"></i>
                 </div>
                 <div class="card-content">
-                  <h4>Call Us</h4>
-                  <p>+1 (555) 123-4567</p>
-                </div>
-              </div>
-
-              <div class="info-card">
-                <div class="icon-container">
-                  <i class="bi bi-clock-history"></i>
-                </div>
-                <div class="card-content">
-                  <h4>Working Hours</h4>
-                  <p>Monday-Saturday: 9AM - 7PM</p>
+                  <h4>Telephone</h4>
+                  <p>(0281) 632704</p>
                 </div>
               </div>
             </div>
@@ -204,9 +193,8 @@
 
           <div class="contact-form-panel">
             <div class="map-container">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31649.59407144157!2d109.28226985317272!3d-7.443193156994608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e655c1da44567c1%3A0xd33981254b97b001!2sRSUD%20Prof.%20Dr.%20Margono%20Soekarjo%20Purwokerto!5e0!3m2!1sen!2sid!4v1762218137678!5m2!1sen!2sid" width="100%" height="100%"" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-
             <div class="form-container">
               <h3>Send Us a Message</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipiscing elit mauris hendrerit faucibus imperdiet nec eget felis.</p>
