--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Home - DIKLAT RSMS</title>
@@ -8,8 +9,10 @@
     <meta name="keywords" content="" />
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link rel="icon" href="/pelatihanmargono/backend/uploads/foto/LogoRSMS2.png" type="image/png" sizes="512x512">
+    <link rel="apple-touch-icon" href="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png" sizes="180x180">
+
+
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
@@ -62,12 +65,12 @@
         >
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.webp" alt=""> -->
-          <svg
-            class="my-icon"
-            viewBox="0 0 24 24"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
+          
+          <img src="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png" 
+              alt="Logo RSMS" 
+              style="height: 40px; margin-right: 8px;">
+
+
             <g id="bgCarrier" stroke-width="0"></g>
             <g
               id="tracerCarrier"
@@ -244,8 +247,8 @@
           <div class="hero-wrapper">
             <div class="hero-image">
               <img
-                src="assets/img/health/showcase-1.webp"
-                alt="Advanced Healthcare"
+                src="/pelatihanmargono/backend/uploads/foto/RSMS2.jpg"
+                alt="RSMS"
                 class="img-fluid"
               />
             </div>
@@ -263,7 +266,7 @@
                         Halo, Selamat Datang di
                       </h3>
                       <h1 data-aos="fade-up" data-aos-delay="200">
-                        Pelatihan Diklat RSUD Prof. Dr. Margono Soekarjo
+                        Pelatihan Diklat <br> Prof. Dr. Margono Soekarjo
                         Purwokerto
                       </h1>
                       <div
