--- a/frontend/login.html
+++ b/frontend/login.html
@@ -220,7 +220,7 @@
           msg.classList.add("d-none");
 
           try {
-            const res = await fetch("http://localhost:5000/auth/login", {
+            const res = await fetch("http://localhost:5000/api/login", {
               method: "POST",
               headers: { "Content-Type": "application/json" },
               body: JSON.stringify(data),
