--- a/frontend/menupelatihan.html
+++ b/frontend/menupelatihan.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Services - MediTrust Bootstrap Template</title>
+    <title>Menu Pelatihan - Diklat RSMS</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link rel="icon" href="/pelatihanmargono/backend/uploads/foto/LogoRSMS2.png" type="image/png" sizes="512x512">
+    <link rel="apple-touch-icon" href="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png" sizes="180x180">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
@@ -256,11 +256,7 @@
         </div>
 
         <div class="title-wrapper">
-          <h1>Services</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit
-            tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
-          </p>
+          <h1>MENU PELATIHAN</h1>
         </div>
       </div>
       <!-- End Page Title -->
