fasilitator dan penyelenggara

--- a/frontend/daftarpelatihan.html
+++ b/frontend/daftarpelatihan.html
@@ -177,7 +177,7 @@
               ></a>
               <ul>
                 <li><a href="menupelatihan.html">Menu Pelatihan</a></li>
-                <li><a href="service-details.html">Kalender Pelatihan</a></li>
+                <li><a href="kalender.html">Kalender Pelatihan</a></li>
                 <li><a href="daftarpelatihan.html">Daftar Pelatihan</a></li>
                 <li><a href="privacy.html">Alur Pendaftaran</a></li>
                 <li><a href="gallery.html">Statistik</a></li>
@@ -190,17 +190,17 @@
               ></a>
               <ul>
                 <li>
-                  <a href="doctors.html">Profesional Fasilitor</a>
+                  <a href="fasilitator.html">Profesional Fasilitor dan Instuktur Tersertifikasi</a>
                 </li>
+                <!-- <li>
+                  <a href="instruktur.html">Instuktur Tersertifikasi</a>
+                </li> -->
                 <li>
-                  <a href="doctors.html">Instuktur Tersertifikasi</a>
-                </li>
-                <li>
-                  <a href="doctors.html"
+                  <a href="penyelenggara.html"
                     >Tim Penyelenggara Pelatihan Tersertifikasi</a
                   >
                 </li>
-                <li><a href="departments.html">Institusi Kerjasama</a></li>
+                <li><a href="intitusi.html">Institusi Kerjasama</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -209,12 +209,11 @@
                 <i class="bi bi-chevron-down toggle-dropdown"></i
               ></a>
               <ul>
-                <li><a href="about.html">Profil Diklat</a></li>
-                <li><a href="terms.html">Struktur Organisasi</a></li>
+                <li><a href="profil.html">Profil Diklat</a></li>
+                <li><a href="struktur_organisasi.html">Struktur Organisasi</a></li>
                 <li><a href="contact.html">Kontak</a></li>
               </ul>
             </li>
-            <!-- <li><a href="contact.html">Contact</a></li> -->
             <li><a href="doctors.html">Kritik dan Saran</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -228,16 +227,6 @@
 
     <!-- Page Title -->
     <div class="page-title">
-      <div class="breadcrumbs">
-        <nav aria-label="breadcrumb">
-          <ol class="breadcrumb">
-            <!-- <li class="breadcrumb-item"><a href="#"><i class="bi bi-house"></i> Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Category</a></li>
-            <li class="breadcrumb-item active current">Appointment</li> -->
-          </ol>
-        </nav>
-      </div>
-
       <div class="title-wrapper">
         <h1>DAFTAR PELATIHAN</h1><br>
         <div>
