--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,8 +6,8 @@
     <title>Login - DIKLAT RSMS</title>
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link rel="icon" href="/pelatihanmargono/backend/uploads/foto/LogoRSMS2.png" type="image/png" sizes="512x512">
+    <link rel="apple-touch-icon" href="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png" sizes="180x180">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
