--- a/frontend/menupelatihan.html
+++ b/frontend/menupelatihan.html
@@ -62,12 +62,12 @@
         >
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.webp" alt=""> -->
-          <svg
-            class="my-icon"
-            viewBox="0 0 24 24"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
+          
+          <img src="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png" 
+              alt="Logo RSMS" 
+              style="height: 40px; margin-right: 8px;">
+
+
             <g id="bgCarrier" stroke-width="0"></g>
             <g
               id="tracerCarrier"
@@ -177,66 +177,62 @@
             </g>
           </svg>
 
-          <h1 class="sitename">MediTrust</h1>
+          <h1 class="sitename">DIKLAT RSMS</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="departments.html">Departments</a></li>
-            <li><a href="services.html" class="active">Services</a></li>
-            <li><a href="doctors.html">Doctors</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li class="dropdown">
               <a href="#"
-                ><span>More Pages</span>
+                ><span>Pelatihan</span>
+                <i class="bi bi-chevron-down toggle-dropdown"></i
+              ></a>
+              <ul>
+                <li><a href="menupelatihan.html">Menu Pelatihan</a></li>
+                <li><a href="kalender.html">Kalender Pelatihan</a></li>
+                <li><a href="daftarpelatihan.html">Daftar Pelatihan</a></li>
+                <li><a href="privacy.html">Alur Pendaftaran</a></li>
+                <li><a href="gallery.html">Statistik</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#"
+                ><span>Tim & Mitra Pelatihan</span>
                 <i class="bi bi-chevron-down toggle-dropdown"></i
               ></a>
               <ul>
                 <li>
-                  <a href="department-details.html">Department Details</a>
+                  <a href="fasilitator.html">Profesional Fasilitor dan Instuktur Tersertifikasi</a>
                 </li>
-                <li><a href="service-details.html">Service Details</a></li>
-                <li><a href="appointment.html">Appointment</a></li>
-                <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="faq.html">Frequently Asked Questions</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="terms.html">Terms</a></li>
-                <li><a href="privacy.html">Privacy</a></li>
-                <li><a href="404.html">404</a></li>
+                <!-- <li>
+                  <a href="instruktur.html">Instuktur Tersertifikasi</a>
+                </li> -->
+                <li>
+                  <a href="penyelenggara.html"
+                    >Tim Penyelenggara Pelatihan Tersertifikasi</a
+                  >
+                </li>
+                <li><a href="intitusi.html">Institusi Kerjasama</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#"
-                ><span>Dropdown</span>
+                ><span>About</span>
                 <i class="bi bi-chevron-down toggle-dropdown"></i
               ></a>
               <ul>
-                <li><a href="#">Dropdown 1</a></li>
-                <li class="dropdown">
-                  <a href="#"
-                    ><span>Deep Dropdown</span>
-                    <i class="bi bi-chevron-down toggle-dropdown"></i
-                  ></a>
-                  <ul>
-                    <li><a href="#">Deep Dropdown 1</a></li>
-                    <li><a href="#">Deep Dropdown 2</a></li>
-                    <li><a href="#">Deep Dropdown 3</a></li>
-                    <li><a href="#">Deep Dropdown 4</a></li>
-                    <li><a href="#">Deep Dropdown 5</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Dropdown 2</a></li>
-                <li><a href="#">Dropdown 3</a></li>
-                <li><a href="#">Dropdown 4</a></li>
+                <li><a href="profil.html">Profil Diklat</a></li>
+                <li><a href="struktur_organisasi.html">Struktur Organisasi</a></li>
+                <li><a href="contact.html">Kontak</a></li>
               </ul>
             </li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="doctors.html">Kritik dan Saran</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
-        <a class="btn-getstarted" href="appointment.html">Appointment</a>
+        <a class="btn-getstarted" href="login.html">Login</a>
       </div>
     </header>
 
