--- a/frontend/index.html
+++ b/frontend/index.html
@@ -210,17 +210,17 @@
               ></a>
               <ul>
                 <li>
-                  <a href="doctors.html">Profesional Fasilitor</a>
+                  <a href="fasilitator.html">Profesional Fasilitor dan Instuktur Tersertifikasi</a>
                 </li>
+                <!-- <li>
+                  <a href="instruktur.html">Instuktur Tersertifikasi</a>
+                </li> -->
                 <li>
-                  <a href="doctors.html">Instuktur Tersertifikasi</a>
-                </li>
-                <li>
-                  <a href="doctors.html"
+                  <a href="penyelenggara.html"
                     >Tim Penyelenggara Pelatihan Tersertifikasi</a
                   >
                 </li>
-                <li><a href="departments.html">Institusi Kerjasama</a></li>
+                <li><a href="intitusi.html">Institusi Kerjasama</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -229,12 +229,11 @@
                 <i class="bi bi-chevron-down toggle-dropdown"></i
               ></a>
               <ul>
-                <li><a href="about.html">Profil Diklat</a></li>
-                <li><a href="terms.html">Struktur Organisasi</a></li>
+                <li><a href="profil.html">Profil Diklat</a></li>
+                <li><a href="struktur_organisasi.html">Struktur Organisasi</a></li>
                 <li><a href="contact.html">Kontak</a></li>
               </ul>
             </li>
-            <!-- <li><a href="contact.html">Contact</a></li> -->
             <li><a href="doctors.html">Kritik dan Saran</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
