--- a/frontend/instruktur.html
+++ b/frontend/instruktur.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Kontak - Diklat RSMS</title>
+  <title>Doctors - MediTrust Bootstrap Template</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
   <!-- Favicons -->
   <link rel="icon" href="/pelatihanmargono/backend/uploads/foto/LogoRSMS2.png" type="image/png" sizes="512x512">
-    <link rel="apple-touch-icon" href="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png" sizes="180x180">
+  <link rel="apple-touch-icon" href="/pelatihanmargono/backend/uploads/foto/LogoRSMS.png" sizes="180x180">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -37,7 +37,7 @@
   ======================================================== -->
 </head>
 
-<body class="contact-page">
+<body class="doctors-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
       <div
@@ -190,11 +190,11 @@
               ></a>
               <ul>
                 <li>
-                  <a href="fasilitator.html">Profesional Fasilitor dan Instuktur Tersertifikasi</a>
+                  <a href="fasilitator.html">Profesional Fasilitor</a>
                 </li>
-                <!-- <li>
+                <li>
                   <a href="instruktur.html">Instuktur Tersertifikasi</a>
-                </li> -->
+                </li>
                 <li>
                   <a href="penyelenggara.html"
                     >Tim Penyelenggara Pelatihan Tersertifikasi</a
@@ -228,119 +228,146 @@
     <!-- Page Title -->
     <div class="page-title">
       <div class="breadcrumbs">
-        <nav aria-label="breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#"><i class="bi bi-house"></i> Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Category</a></li>
-            <li class="breadcrumb-item active current">Contact</li>
-          </ol>
-        </nav>
       </div>
 
       <div class="title-wrapper">
-        <h1>KONTAK</h1>
+        <h1>TIM PENYELENGGARA PELATIHAN TERSERTIFIKASI</h1>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact section">
+    <!-- Doctors Section -->
+    <section id="doctors" class="doctors section">
 
-      <div class="container">
-        <div class="contact-wrapper">
-          <div class="contact-info-panel">
-            <div class="contact-info-header">
-              <h3>Informasi Kontak</h3>
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row gy-4">
+
+          <div id="fasilitatorContainer" class="row gy-4">
+            <script>
+              async function loadFasilitator() {
+                const res = await fetch("http://localhost:5000/api/penyelenggara");
+                const data = await res.json();
+
+                const container = document.getElementById("fasilitatorContainer");
+                container.innerHTML = "";
+
+                data.forEach((fasil) => {
+                  const foto = fasil.foto
+                  ? `http://localhost:5000/uploads/fasilitator/${fasil.foto}`
+                  : `http://localhost:5000/uploads/fasilitator/default-user.png`;
+
+
+                  const card = `
+                    <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+                      <div class="doctor-card">
+
+                        <div class="doctor-image">
+                          <img src="${foto}" alt="${fasil.nama}" class="img-fluid">
+
+                          <div class="doctor-overlay">
+                            <div class="doctor-social">
+                              <a href="${fasil.linkedin || "#"}" class="social-link"><i class="bi bi-linkedin"></i></a>
+                              <a href="${fasil.twitter || "#"}" class="social-link"><i class="bi bi-twitter"></i></a>
+                              <a href="mailto:${fasil.email}" class="social-link"><i class="bi bi-envelope"></i></a>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class="doctor-content">
+                          <h4 class="doctor-name">${fasil.nama}</h4>
+                          <p class="doctor-bio">${fasil.keterangan || "-"}</p>
+                        </div>
+
+                      </div>
+                    </div>
+                  `;
+
+                  container.innerHTML += card;
+                });
+              }
+
+              loadFasilitator();
+              </script>
             </div>
+          </div><!-- End Doctor Card -->
 
-            <div class="contact-info-cards">
-              <div class="info-card">
-                <div class="icon-container">
-                  <i class="bi bi-pin-map-fill"></i>
-                </div>
-                <div class="card-content">
-                  <h4>Lokasi</h4>
-                  <p>Jl. Dr. Angka No. 1-2 Purwokerto, Kabupaten Banyumas
-                      Provinsi Jawa Tengah, Kode Pos 53122/p>
+          <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="doctor-card">
+              <div class="doctor-image">
+                <img src="assets/img/health/staff-9.webp" alt="Dr. David Rodriguez" class="img-fluid">
+                <div class="doctor-overlay">
+                  <div class="doctor-social">
+                    <a href="#" class="social-link"><i class="bi bi-linkedin"></i></a>
+                    <a href="#" class="social-link"><i class="bi bi-twitter"></i></a>
+                    <a href="#" class="social-link"><i class="bi bi-envelope"></i></a>
+                  </div>
                 </div>
               </div>
-
-              <div class="info-card">
-                <div class="icon-container">
-                  <i class="bi bi-envelope-open"></i>
+              <div class="doctor-content">
+                <h4 class="doctor-name">Dr. David Rodriguez</h4>
+                <span class="doctor-specialty">Dermatologist</span>
+                <p class="doctor-bio">Cras ultricies ligula sed magna dictum porta. Lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque habitant.</p>
+                <div class="doctor-experience">
+                  <span class="experience-badge">16+ Years Experience</span>
                 </div>
-                <div class="card-content">
-                  <h4>Email</h4>
-                  <p>rsmargono@jatengprov.go.id</p>
-                </div>
-              </div>
-
-              <div class="info-card">
-                <div class="icon-container">
-                  <i class="bi bi-telephone-fill"></i>
-                </div>
-                <div class="card-content">
-                  <h4>Telephone</h4>
-                  <p>(0281) 632704</p>
-                </div>
+                <a href="appointment.html" class="btn-appointment">Book Appointment</a>
               </div>
             </div>
+          </div><!-- End Doctor Card -->
 
-            <div class="social-links-panel">
-              <h5>Follow Us</h5>
-              <div class="social-icons">
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
-                <a href="#"><i class="bi bi-youtube"></i></a>
+          <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="doctor-card">
+              <div class="doctor-image">
+                <img src="assets/img/health/staff-2.webp" alt="Dr. Amanda Clark" class="img-fluid">
+                <div class="doctor-overlay">
+                  <div class="doctor-social">
+                    <a href="#" class="social-link"><i class="bi bi-linkedin"></i></a>
+                    <a href="#" class="social-link"><i class="bi bi-twitter"></i></a>
+                    <a href="#" class="social-link"><i class="bi bi-envelope"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="doctor-content">
+                <h4 class="doctor-name">Dr. Amanda Clark</h4>
+                <span class="doctor-specialty">Oncologist</span>
+                <p class="doctor-bio">Sed porttitor lectus nibh. Curabitur aliquet quam id dui posuere blandit proin eget tortor risus pellentesque habitant.</p>
+                <div class="doctor-experience">
+                  <span class="experience-badge">22+ Years Experience</span>
+                </div>
+                <a href="appointment.html" class="btn-appointment">Book Appointment</a>
               </div>
             </div>
-          </div>
+          </div><!-- End Doctor Card -->
 
-          <div class="contact-form-panel">
-            <div class="map-container">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31649.59407144157!2d109.28226985317272!3d-7.443193156994608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e655c1da44567c1%3A0xd33981254b97b001!2sRSUD%20Prof.%20Dr.%20Margono%20Soekarjo%20Purwokerto!5e0!3m2!1sen!2sid!4v1762218137678!5m2!1sen!2sid" width="100%" height="100%"" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="doctor-card">
+              <div class="doctor-image">
+                <img src="assets/img/health/staff-12.webp" alt="Dr. James Wilson" class="img-fluid">
+                <div class="doctor-overlay">
+                  <div class="doctor-social">
+                    <a href="#" class="social-link"><i class="bi bi-linkedin"></i></a>
+                    <a href="#" class="social-link"><i class="bi bi-twitter"></i></a>
+                    <a href="#" class="social-link"><i class="bi bi-envelope"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="doctor-content">
+                <h4 class="doctor-name">Dr. James Wilson</h4>
+                <span class="doctor-specialty">General Surgery</span>
+                <p class="doctor-bio">Nulla porttitor accumsan tincidunt. Mauris blandit aliquet elit eget tincidunt nibh pulvinar a curabitur arcu erat accumsan.</p>
+                <div class="doctor-experience">
+                  <span class="experience-badge">19+ Years Experience</span>
+                </div>
+                <a href="appointment.html" class="btn-appointment">Book Appointment</a>
+              </div>
             </div>
-            <div class="form-container">
-              <h3>Send Us a Message</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipiscing elit mauris hendrerit faucibus imperdiet nec eget felis.</p>
+          </div><!-- End Doctor Card -->
 
-              <form action="forms/contact.php" method="post" class="php-email-form">
-                <div class="form-floating mb-3">
-                  <input type="text" class="form-control" id="nameInput" name="name" placeholder="Full Name" required="">
-                  <label for="nameInput">Full Name</label>
-                </div>
-
-                <div class="form-floating mb-3">
-                  <input type="email" class="form-control" id="emailInput" name="email" placeholder="Email Address" required="">
-                  <label for="emailInput">Email Address</label>
-                </div>
-
-                <div class="form-floating mb-3">
-                  <input type="text" class="form-control" id="subjectInput" name="subject" placeholder="Subject" required="">
-                  <label for="subjectInput">Subject</label>
-                </div>
-
-                <div class="form-floating mb-3">
-                  <textarea class="form-control" id="messageInput" name="message" rows="5" placeholder="Your Message" style="height: 150px" required=""></textarea>
-                  <label for="messageInput">Your Message</label>
-                </div>
-
-                <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-                </div>
-
-                <div class="d-grid">
-                  <button type="submit" class="btn-submit">Send Message <i class="bi bi-send-fill ms-2"></i></button>
-                </div>
-              </form>
-            </div>
-          </div>
         </div>
+
       </div>
-    </section><!-- /Contact Section -->
+
+    </section><!-- /Doctors Section -->
 
   </main>
 
