institusi dan benerin sisa kuota peserta

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -270,7 +270,7 @@
                     </h3>
 
                     <h1 data-aos="fade-up" data-aos-delay="200">
-                      Pelatihan Diklat <br />
+                      Diklat <br />
                       Prof. Dr. Margono Soekarjo <br />Purwokerto
                     </h1>
 
