detail menu pelatihan kategori dan benerin modal detail pelatihan

--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -228,13 +228,6 @@
     <!-- Page Title -->
     <div class="page-title">
       <div class="breadcrumbs">
-        <nav aria-label="breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#"><i class="bi bi-house"></i> Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Category</a></li>
-            <li class="breadcrumb-item active current">Contact</li>
-          </ol>
-        </nav>
       </div>
 
       <div class="title-wrapper">
@@ -259,8 +252,7 @@
                 </div>
                 <div class="card-content">
                   <h4>Lokasi</h4>
-                  <p>Jl. Dr. Angka No. 1-2 Purwokerto, Kabupaten Banyumas
-                      Provinsi Jawa Tengah, Kode Pos 53122/p>
+                  <p>Jl. Dr. Gumbreg No.1, Kebontebu, Berkoh, Kec. Purwokerto Sel., Kabupaten Banyumas, Jawa Tengah 53146</p>
                 </div>
               </div>
 
@@ -288,11 +280,11 @@
             <div class="social-links-panel">
               <h5>Follow Us</h5>
               <div class="social-icons">
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
-                <a href="#"><i class="bi bi-youtube"></i></a>
+                <a href="https://www.facebook.com/RSMargono/"><i class="bi bi-facebook"></i></a>
+                <!-- <a href="#"><i class="bi bi-twitter-x"></i></a> -->
+                <a href="https://www.instagram.com/rsudmargono/"><i class="bi bi-instagram"></i></a>
+                <!-- <a href="#"><i class="bi bi-linkedin"></i></a> -->
+                <a href="https://www.youtube.com/@rsmargono"><i class="bi bi-youtube"></i></a>
               </div>
             </div>
           </div>
@@ -301,7 +293,7 @@
             <div class="map-container">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31649.59407144157!2d109.28226985317272!3d-7.443193156994608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e655c1da44567c1%3A0xd33981254b97b001!2sRSUD%20Prof.%20Dr.%20Margono%20Soekarjo%20Purwokerto!5e0!3m2!1sen!2sid!4v1762218137678!5m2!1sen!2sid" width="100%" height="100%"" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="form-container">
+            <!-- <div class="form-container">
               <h3>Send Us a Message</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipiscing elit mauris hendrerit faucibus imperdiet nec eget felis.</p>
 
@@ -336,7 +328,7 @@
                   <button type="submit" class="btn-submit">Send Message <i class="bi bi-send-fill ms-2"></i></button>
                 </div>
               </form>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
